--- a/public/component/auth/header/header_inner.css
+++ b/public/component/auth/header/header_inner.css
@@ -1,12 +1,9 @@
 .header_inner {
     width: 100%;
     margin-top: 10px;
-
     background-color: #fff;
-    /* 흰색 배경 */
     text-align: center;
     padding: 100px 0 36px;
-    /* 아주 연한 구분선 */
 }
 
 .header_logo {
@@ -17,4 +14,8 @@
     letter-spacing: 1px;
     margin: 0;
     font-family: "Pretendard", "Noto Sans KR", sans-serif;
+}
+
+.header_inner a {
+    text-decoration: none;  /* 여기에 적용! */
 }
